--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "contentful-starter-gatsby-blog",
-  "description": "Contentful Gatsby Starter Blog",
+  "name": "jason-sprouse-blog",
+  "description": "Jason Sprouse Blog",
   "private": true,
   "version": "0.0.1",
-  "author": "Contentful <opensource@contentful.com>",
+  "author": "Jason Sprouse <jason.a.sprouse@gmail.com>",
   "bugs": {
     "url": "https://github.com/contentful/starter-gatsby-blog/issues"
   },
